# video-control-flow

./: .gitignore  BRAINSTORMING.md  CMakeLists.txt  LICENSE  README.md
dependencies/: CMakeLists.txt
dependencies/glad/: glad.h
include/: information.h  logger.h
src/: driver.cc  information.cc  information.cpp  logger.cc  main.cpp
src/glad/: glad.c
